Starts storing lucene index files in blob storage

--- a/src/Kentico.Xperience.Lucene.Core/Kentico.Xperience.Lucene.Core.csproj
+++ b/src/Kentico.Xperience.Lucene.Core/Kentico.Xperience.Lucene.Core.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Lucene.Net" />
     <PackageReference Include="Lucene.Net.Analysis.Common" />
     <PackageReference Include="Lucene.Net.Facet" />
+    <PackageReference Include="Lucene.Net.Store.AzureBlob" />
   </ItemGroup>
 
 </Project>
